# semantic-shift-freedom

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: annotation_protocol.md
outputs/: annotation_sample.csv  combined_modern_analysis.json  control_words.json  corpus_manifest.json  corpus_validation.json  deep_semantic_analysis.json  economic_freedom_analysis.json  financial_freedom_deep_dive.json  freedom_liberty_analysis.json  gemini_vs_haiku_460.json  haiku_v2_eval.json  hansard_analysis.json  improved_haiku_prompt.txt  liberty_trends.json  method_review.md  modern_embeddings.json  negative_positive_eebo.json  negative_positive_embeddings.json  negative_positive_ngrams.json  negative_positive_summary.md  neighborhood_dynamics.json  opus_gold_100_reasoned.json  opus_gold_500.json  opus_vs_haiku.json  robustness.json  semantic_axis.json  tier2_analysis.json  tier2_fulltext_analysis.json  trends_2020s_analysis.json  trends_full_history.json  wiki_embeddings.json
paper/: proposal.html  proposal.md  simple.html  simple.md
src/: __init__.py  classify_liberty.py  control_words.py  corpus_manifest.py  corpus_validation.py  deep_semantic_analysis.py  domain_tagger.py  economic_freedom_analysis.py  embeddings.py  financial_freedom_deep_dive.py  freedom_liberty_analysis.py  hansard_analysis.py  hansard_archive_extractor.py  hansard_sentence_extractor.py  liberty_trends.py  metrics.py  modal_combined_analysis.py  modal_enrich_sentences.py  modal_hansard.py  modal_hansard_archive.py  modal_hansard_sentences.py  modal_jobs.py  modal_parlparse.py  modal_runner.py  (+19 more)
(+25 files in other folders)
