[project]
name = "freedom-semantic-shift"
version = "0.1.0"
description = "Computational study of how 'freedom' shifted between negative and positive liberty across 500 years of English text"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.86.0",
    "datasets>=4.8.4",
    "gensim>=4.4.0",
    "google-genai>=1.71.0",
    "modal>=1.3.5",
    "numpy>=2.4.3",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "pytrends>=4.9.0",
    "scipy>=1.17.1",
    "wikiextractor>=3.0.6",
]
